# booop

./: README.md  main.c  main.cpp  main0.cpp  rna.cpp  rna.h
dna/: CMakeLists.txt  main.cpp  readme.md  rna.cpp  rna.h
life/: Args.h  CMakeLists.txt  Cell.cpp  Cell.h  Commando.cpp  Commando.h  Field.cpp  Field.h  GameField.cpp  GameField.h  UI.cpp  UI.h  main.cpp  readme.md
logo/src/: ConsoleManager.java  DrawTask.java  Game.java  Grid.java  InitTask.java  Line.java  MoveTask.java  Performer.java  Task.java  TaskFactory.java  TeleportTask.java  Visual.java  WardTask.java
morse/src/: Dictionary.java  IOmanager.java  Literal.java  Loader.java  Main.java  StatElem.java  StatTable.java
pong2.1/src/: Ball.java  Game.java  Pair.java  Player.java  Server.java  Supervisor.java  ThreadPool.java  Translator.java  ViewContent.java  ViewInterface.java
spaceProg/: Args.h  AutoGrab.cpp  AutoGrab.h  AutoScan.cpp  AutoScan.h  Bomber.cpp  Bomber.h  CMakeLists.txt  Collector.cpp  Collector.h  Coords.h  Engine.cpp  Engine.h  IComm.cpp  IComm.h  ICommand.cpp  ICommand.h  IMode.cpp  IMode.h  IRobot.cpp  IRobot.h  Manual.cpp  Manual.h  ManualCommand.cpp  ManualCommand.h  Map.cpp  Map.h  Parser.cpp  Parser.h  UI.cpp  UI.h  main.cpp  readme.md
tasks/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
